# hh_api

./: main.py  pyproject.toml
data/: vacancies.json
src/: work_with_api.py  work_with_vacancies.py
tests/: test_api.py  test_vacancies.py
