[tool.poetry]
name = "hh-api"
version = "0.1.0"
description = ""
authors = ["Михаил"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
mypy = "^1.15.0"
isort = "^6.0.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

